# dewww

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  sqlx-data.json
migrations/: 20220818224132_initial.down.sql  20220818224132_initial.up.sql
src/: crawler.rs  database.rs  main.rs  runner.rs  settings.rs  types.rs  web.rs
