[package]
name = "dewww"
version = "0.1.0"
edition = "2021"

[dependencies.sqlx]
version = "0.6.1"
features = ["runtime-tokio-rustls", "sqlite", "offline"]

[dependencies.tokio]
version = "1.20"
features = ["macros", "rt-multi-thread", "signal", "time"]

[dependencies]
config = "0.13.1"
reqwest = "0.11.11"
serde = "1.0.143"
serde_derive = "1.0.8"
scraper = "0.13.0"
url = "2.2.2"